[package]
name = "hk"
version = "0.1.0"
authors = ["Hendrik Schawe <surt91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
rand_pcg = "0.2.0"
itertools = "*"
clap = "*"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
