[package]
name = "hk"
version = "0.1.0"
authors = ["Hendrik Schawe <surt91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
graphtool = ["inline-python"]

[dependencies]
rand = "0.7.0"
rand_pcg = "0.2.0"
rand_distr = "0.2.2"
itertools = "*"
ordered-float = "1.0"
structopt = "0.3"
petgraph = "0.4"

png = "*"
colorous = "*"

git-version = "*"

largedev = { git = "https://github.com/surt91/largedev" }

inline-python = { version = "0.6", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
